# MineClearance

./: CMakeLists.txt  程序结构.docx  资料收集.docx
inc/: draw.h  game.h  include.h  input.h  myclass.h
src/: draw.cpp  game.cpp  input.cpp  main.cpp
